<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application  -->
    <string name="app_name">Nefful Distributor Assistant</string>

    <!-- Misc -->
    <string name="list_name">List Name</string>
    <string name="list_id">List ID</string>
    <string name="default_list_name">Default</string>
    <string name="default_list_id">0</string>
    <string name="beautiful_story">Beautiful Story</string>
    <string name="teviron_story">Teviron Story</string>
    <string name="young_life_story">Young Life Story</string>
    <string name="nefful_home">Nefful Home</string>
    <string name="nefful_mes">Nefful MES</string>
    <string name="subcategory">Subcategory</string>
    <string name="photo_name">Photo Name</string>
    <string name="position">Position</string>
    <string name="dialog_list_exist_title">Item List Exists</string>
    <string name="dialog_list_exist_body">Click \"Save\" to override or click \"Save As\" to save as new list.</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="preview">Preview</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="labor_cost">L/C</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add">Add</string>
    <string name="labor_cost_opt"> L/C (Opt.)</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="default_name">Anonymous</string>
    <string name="total">Total:</string>
    <string name="order_total">Order Total:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="member_disc">Member Disc:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="all_subcategories">All Subcategories</string>
    <string name="size_free">FREE</string>
    <string name="select_size">[Select Size]</string>
    <string name="select_color">[Select Color]</string>
    <string name="not_applicable">N/A</string>
    <string name="about">About</string>
    <string name="button_continue">Continue</string>

    <!-- Action Bar / Activity Label -->
    <string name="title_activity_saved_profile">Saved Lists</string>
    <string name="title_activity_print_dialog">Google Cloud Print</string>
    <string name="title_activity_preview">Preview</string>
    <string name="title_activity_pdf">Document Preview</string>
    <string name="title_activity_add_item">Add</string>
    <string name="title_activity_delete_item">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_fullscreen">Catalogue</string>
    <string name="title_activity_webview_mes">Nefful Member Enquiry System</string>
    <string name="title_activity_webview_donation">Donation</string>

    <!-- Preference Related -->
    <string name="pref_settings">Settings</string>
    <string name="pref_new_version">New Version</string>
    <string name="pref_old_version">Old Version</string>

    <!-- About Activity -->
    <string name="about_app">This application is dedicated to Nefful distributors to make their customer order process more manageable and efficient. Enjoy and share :)</string>
    <string name="license">License: Affero GPL \n<a href="https://github.com/zenitht/Nefful-Distributor-Assistant">Source Code on Github</a></string>
    <string name="app_version">Version: v1.0 \n<a href="http://neffulapp.net76.net">http://neffulapp.net76.net/</a></string>
    <string name="tips">Tips</string>
    <string name="tip1">► If you want to add new product to the catalogue, it\'s recommended to choose a photo with aspect ratio of 9:16.</string>
    <string name="tip2">► You can long click any row on \"Load\" page to trigger contextual menu to select one or multiple lists to delete.</string>
    <string name="tip3">► In the settings, you can sort the order of main category tabs and preview list items by dragging an item and drop it to your desired position.</string>
    <string name="tip4">► You can print the order list on the fly with a Cloud Ready Printer. No PC setup required, you can print anytime and anywhere without a PC.</string>
    <string name="tip5">► You can swipe the tab strip at the top for quick navigation.</string>
    <string name="tip6">► You can view the product photo in full screen size by tapping it. </string>
    <string name="tip7">► You can enable/disable the scrolling text by tapping it.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">This application was developed by a Nefful independent distributor and is in no way meant to represent Nefful Malaysia SDN BHD directly. I do not own the copyright of any of the photos used in this application. I will remove any copyrighted photos in the following update upon request by rightful copyright owners. No copyright infringement intended.</string>
    <string name="libraries">Libraries</string>
    <string name="libraries_content"><ol><li><a href="https://github.com/itext/itextg">iTextG</a> (AGPL)\n</li><li><a href="https://github.com/jblough/Android-Pdf-Viewer-Library">Android Pdf Viewer</a> (LGPL)\n</li><li><a href="https://github.com/rtyley/spongycastle-eclipse">Spongy Castle</a> (MIT License)\n</li><li><a href="https://github.com/astuetz/PagerSlidingTabStrip">PagerSlidingTabStrip</a> (Apache License v2)</li></ol></string>
    <string name="bugs_report">Bugs Report</string>
    <string name="contact_email">If you encounter any bugs, product detail discrepancies or if you have any product photos with better quality, please submit to the email below.\n<u>nefful.app@gmail.com</u></string>
    <string name="donations">Donations</string>
    <string name="donations_content">If you find this application useful, a donation is very much appreciated.</string>
    <string name="direct_deposit"><u>Direct Deposit</u></string>
    <string name="mbb">MBB</string>
    <string name="cimb">CIMB</string>
    <string name="rhb">RHB</string>
    <string name="pbe">PBE</string>
    <string name="mbb_no">: 157139922721</string>
    <string name="cimb_no">: 07140150230521</string>
    <string name="rhb_no">: 11601100092077</string>
    <string name="pbe_no">: 4675528504</string>

</resources>