<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_donate"
        tools:ignore="ContentDescription"
        android:src="@drawable/btn_donate"
        style="?android:borderlessButtonStyle"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/accepted_cc"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/btn_donate"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direct_deposit"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/table_acc_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/mbb"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbb_no"
                android:id="@+id/mbb_no"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cimb"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cimb_no"
                android:id="@+id/cimb_no"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow2"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rhb"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rhb_no"
                android:id="@+id/rhb_no"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow3"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pbe"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pbe_no"
                android:id="@+id/pbe_no"
                android:textIsSelectable="true" />
        </TableRow>

    </TableLayout>

</RelativeLayout>